# corectal-cancer-prediction

./: .gitignore  Dockerfile  application.py  mlops_pipeline.yaml  pyproject.toml
artifacts/model/: model.pkl
artifacts/processed/: X_test.pkl  scaler.pkl  y_test.pkl  y_train.pkl
kubeflow_pipeline/: mlops_pipeline.py
mlruns/0/: meta.yaml
mlruns/0/cf0a80e286c3473ba896b9f14b00c4b4/: meta.yaml
mlruns/0/cf0a80e286c3473ba896b9f14b00c4b4/metrics/: Accuracy Score  F1 Score  Precision Score  ROC-AUC  Recall Score
mlruns/0/cf0a80e286c3473ba896b9f14b00c4b4/tags/: mlflow.runName
notebook/: notebook.ipynb
src/: custom_exception.py  data_processing.py  logger.py  model_training.py
static/: styles.css
templates/: index.html
